[package]
name = "tree-sitter-athena"
description = "Tree-sitter for athena"
version = "0.1.0"
authors = ["Jeck0v <arnaud.fischer75@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "athena"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jeck0v/tree-sitter-athena"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
